--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "author": "5t3ph",
     "scripts": {
       "build:sass": "sass  --no-source-map src/sass:public/css",
-      "copy:pages": "copyfiles -u 1 ./src/pages/**/* public",
-      "copy:portfolio": "copyfiles -u 1 ./src/portfolio/**/* public",
-      "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
-      "copy:html": "copyfiles -u 1 ./src/*.html public",
+      "copy:pages": "copyfiles -u 1 ./personal-portfolio/src/pages/**/* public",
+      "copy:portfolio": "copyfiles -u 1 ./personal-portfolio/src/portfolio/**/* public",
+      "copy:assets": "copyfiles -u 1 ./personal-portfolio/src/assets/**/* public",
+      "copy:html": "copyfiles -u 1 ./personal-portfolio/src/*.html public",
       "copy": "npm-run-all --parallel copy:*",
-      "watch:pages": "onchange \"src/pages/**/*\" -- npm run copy:pages",
-      "watch:portfolio": "onchange \"src/portfolio/**/*\" -- npm run copy:portfolio",
-      "watch:assets": "onchange \"src/assets/**/*\" -- npm run copy:assets",
-      "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+      "watch:pages": "onchange \"personal-portfolio/src/pages/**/*\" -- npm run copy:pages",
+      "watch:portfolio": "onchange \"personal-portfolio/src/portfolio/**/*\" -- npm run copy:portfolio",
+      "watch:assets": "onchange \"personal-portfolio/src/assets/**/*\" -- npm run copy:assets",
+      "watch:html": "onchange \"personal-portfolio/*.html\" -- npm run copy:html",
       "watch:sass": "sass  --no-source-map --watch src/sass:public/assets/css",
       "watch": "npm-run-all --parallel watch:*",
       "serve": "browser-sync start --server public --files public",
