--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "public/index.html",
     "author": "5t3ph",
     "scripts": {
-      "build:sass": "sass  --no-source-map src/sass:public/assets/css",
+      "build:sass": "sass  --no-source-map src/sass:public/css",
       "copy:pages": "copyfiles -u 1 ./personal-portfolio/src/pages/**/* public",
       "copy:portfolio": "copyfiles -u 1 ./personal-portfolio/src/portfolio/**/* public",
       "copy:assets": "copyfiles -u 1 ./personal-portfolio/src/assets/**/* public",
@@ -15,7 +15,7 @@
       "watch:portfolio": "onchange \"/personal-portfolio/src/portfolio/**/*\" -- npm run copy:portfolio",
       "watch:assets": "onchange \"/personal-portfolio/src/assets/**/*\" -- npm run copy:assets",
       "watch:html": "onchange \"personal-portfolio/*.html\" -- npm run copy:html",
-      "watch:sass": "sass  --no-source-map --watch src/sass:public/assets/css",
+      "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
       "watch": "npm-run-all --parallel watch:*",
       "serve": "browser-sync start --server public --files public",
       "start": "npm-run-all copy --parallel watch serve",
